# ml-notebooks

./: .gitignore  .gitmodules  requirements.txt
courses/algos/main_project/: .gitignore  CMakeLists.txt  hello.py  obdev.config.json  obts.config.json
courses/algos/main_project/balgosrbkw/: CMakeLists.txt
courses/algos/main_project/balgosrbkw/01-fundamentals/: CMakeLists.txt
courses/algos/main_project/balgosrbkw/01-fundamentals/binary-search/: CMakeLists.txt  main.c
courses/algos/main_project/balgosrbkw/01-fundamentals/binary-search/utest_balgosrbkw_01_binsearch/: ref_balgosrbkw_01_binsearch.cc
courses/algos/main_project/balgosrbkw/01-fundamentals/queuell/: CMakeLists.txt  main.c  queue.c
courses/algos/main_project/balgosrbkw/01-fundamentals/stack/: CMakeLists.txt  stack.c
courses/algos/main_project/balgosrbkw/01-fundamentals/stackfixed/: CMakeLists.txt  stack.c  stack.h
courses/algos/main_project/balgosrbkw/01-fundamentals/stackll/: CMakeLists.txt  main.c  stack.c  test_balgosrbkw_01_stackll.cc
courses/algos/main_project/balgosrbkw/01-fundamentals/unionfind/: CMakeLists.txt  main.c  uf.h
courses/algos/main_project/balgosrbkw/02-sorting/: CMakeLists.txt
courses/algos/main_project/balgosrbkw/02-sorting/3wquicksort/: CMakeLists.txt  main.c  sort.c  test_balgosrbkw_02_3wquicksort.cc
courses/algos/main_project/balgosrbkw/02-sorting/bumergesort/: CMakeLists.txt  sort.c
courses/algos/main_project/balgosrbkw/02-sorting/heap/: CMakeLists.txt  heap.c  heap.h  main.c
courses/algos/main_project/balgosrbkw/02-sorting/heapsort/: CMakeLists.txt  sort.c  sort.h
courses/algos/main_project/balgosrbkw/02-sorting/insertionsort/: CMakeLists.txt  main.c  sort.c
courses/algos/main_project/balgosrbkw/02-sorting/quicksort/: CMakeLists.txt  sort.c
courses/algos/main_project/balgosrbkw/02-sorting/selectionsort/: CMakeLists.txt  sort.c
courses/algos/main_project/balgosrbkw/02-sorting/shellsort/: CMakeLists.txt  sort.c
courses/algos/main_project/balgosrbkw/02-sorting/tdmergesort/: CMakeLists.txt  sort.c  test_balgosrbkw_02_tdmergesort.cc
courses/algos/main_project/balgosrbkw/03-bagquestack/: CMakeLists.txt
courses/algos/main_project/balgosrbkw/03-bagquestack/queuell/: CMakeLists.txt  queue.c  queue.h  test_balgosrbkw_03_queuell.cc
courses/algos/main_project/balgosrbkw/03-bagquestack/stack/: CMakeLists.txt  stack.h
courses/algos/main_project/balgosrbkw/03-bagquestack/stackfixed/: CMakeLists.txt  main.c
courses/algos/main_project/balgosrbkw/03-bagquestack/stackll/: CMakeLists.txt
courses/algos/main_project/balgosrbkw/03-bagquestack/unionfind/: CMakeLists.txt  uf.c
courses/algos/main_project/balgosrbkw/03-symtables/: CMakeLists.txt
courses/algos/main_project/balgosrbkw/03-symtables/bsttable/: CMakeLists.txt  table.c  table.h
courses/algos/main_project/balgosrbkw/03-symtables/hashtable/: CMakeLists.txt  main.c  table.c
courses/algos/main_project/balgosrbkw/03-symtables/lltable/: CMakeLists.txt  table.c  table.h
courses/algos/main_project/balgosrbkw/04-graphs/: CMakeLists.txt
courses/algos/main_project/balgosrbkw/04-graphs/directed/: CMakeLists.txt  dfs-order.cc  dfs-order.hh  digraph.cc  digraph.hh  directed-cycle.cc  directed-cycle.hh  directed-dfs.cc  directed-dfs.hh  examples.cc  examples.hh  scc.cc  scc.hh  test_dfs_order.cc  test_digraph.cc  test_directed_cycle.cc  test_directed_dfs.cc  test_scc.cc  test_topological.cc  test_transitive_closure.cc  topological.cc  topological.hh  transitive-closure.cc  transitive-closure.hh
courses/algos/main_project/balgosrbkw/04-graphs/undirected/: CMakeLists.txt  base.cc  base.hh  bfs-path.cc  bfs-path.hh  bipartite.cc  bipartite.hh  cc.cc  cc.hh  cycle.cc  cycle.hh  dfs-path.cc  dfs-path.hh  dfs.cc  dfs.hh  graph.cc  graph.hh  test_base.cc  test_bfs_path.cc  test_bipartite.cc  test_cc.cc  test_cycle.cc  test_dfs.cc  test_dfs_path.cc  test_graph.cc
courses/algos/main_project/basics/: CMakeLists.txt
courses/algos/main_project/basics/calc/: CMakeLists.txt  main.c  test10.input  test13.input  test2.input  test5.input  test8.input
courses/algos/main_project/basics/calc/utest_basics_calc/: ref_basics_calc.py  test11.input  test12.input  test14.input  test3.input  test4.input  test6.input  test7.input  test9.input
courses/algos/main_project/basics/cat/: CMakeLists.txt  bin_file.input  main.c
courses/algos/main_project/basics/cat/utest_basics_cat/: ref_basics_cat.cc
courses/algos/main_project/basics/fact/: CMakeLists.txt  main.c
courses/algos/main_project/basics/fact/utest_basics_fact/: ref_basics_fact.cc
courses/algos/main_project/basics/fibo/: CMakeLists.txt  main.c  test_basics_fibo.cc
courses/algos/main_project/basics/printer/: CMakeLists.txt  main.c  test_basics_printer.cc
courses/algos/main_project/libs/: CMakeLists.txt
courses/algos/main_project/libs/lealloc_v0/: CMakeLists.txt
courses/algos/main_project/libs/lealloc_v0/include/: lealloc.h
courses/algos/main_project/libs/lealloc_v0/src/: alloc.c
courses/algos/main_project/libs/lealloc_v01/: CMakeLists.txt
courses/algos/main_project/libs/lealloc_v01/src/: alloc.c
courses/algos/main_project/libs/ledebug/: CMakeLists.txt
courses/algos/main_project/libs/ledebug/include/: ledebug.h
courses/algos/main_project/libs/ledebug/src/: ledebug.c
courses/algos/main_project/libs/leio/: CMakeLists.txt
courses/algos/main_project/libs/leio/include/: leio.h
courses/algos/main_project/libs/leio/src/: leio.c
courses/algos/main_project/libs/lerand/: CMakeLists.txt
courses/algos/main_project/libs/lerand/include/: lerand.h
courses/algos/main_project/libs/lerand/src/: lerand.c
courses/algos/main_project/libs/lestd/: CMakeLists.txt
courses/algos/main_project/libs/lestd/include/: lestd.h
courses/algos/main_project/libs/lestd/src/: lestd.c
courses/algos/main_project/tests/: CMakeLists.txt  checker.py
docs/: automatic_differentiation.ipynb  mlp.ipynb  (+16 more)
refs/dnnl/tests/getting-started/: CMakeLists.txt
refs/dnnl/tests/getting-started/src/: example_utils.hpp  main.cc
refs/torch-internals/cpp-tests/train-mnist/: CMakeLists.txt  main.cc
(+207 files in other folders)
